# lg-user-poc1

fromuseer/: README.md
fromuser/: pyproject.toml
fromuser/output/: user_persona.json
fromuser/src/fromuser/: crew.py  main.py
fromuser/src/fromuser/config/: agents.yaml  tasks.yaml
