[project]
name = "fromuser"
version = "0.1.0"
description = "fromUser using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
fromuser = "fromuser.main:run"
run_crew = "fromuser.main:run"
train = "fromuser.main:train"
replay = "fromuser.main:replay"
test = "fromuser.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
